# meerkat

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mise.toml  package-lock.json  package.json
.claude/commands/: update-icons.md  update-tray-icon.md
.github/workflows/: ci.yml  release.yml
scripts/: homebrew-cask.rb.tmpl  update-homebrew-cask.sh
src/: App.css  App.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  db.rs  lib.rs  models.rs  notifications.rs  polling.rs
src-tauri/src/commands/: gitlab.rs  mod.rs  reminders.rs  settings.rs  system.rs
src/components/: CustomReminderModal.jsx
src/hooks/: useGitlab.js  useSettings.js
src/utils/: formatDateTime.js
