[package]
name = "meerkat"
version = "0.0.0"
description = "Meerkat - Desktop notification app for tracking GitLab merge requests"
authors = ["Aleksey Petrunnik"]
license = "MIT"
repository = "https://github.com/aleksey925/meerkat"
edition = "2021"
rust-version = "1.95.0"
publish = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
plist = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder"], default-features = false }

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
